# PyroGyro

./: .gitignore  LICENSE  README.md  app_win.spec  pyproject.toml  version.txt
.github/workflows/: release.yml
configs/: default_xbox.yml  gyro_on_explorer.yml  xbox.yml
pyrogyro/: constants.py  gamepad_motion.py  installer.py  io_types.py  mapping.py  math.py  monitor_focus.py  platform.py  platform_util.py  project_util.py  pyrogyro.py  pyrogyro_pad.py  runtime_hook.py  sdl_overlay_test.py  system_tray.py  web.py  win_runtime_hook.py
res/web/templates/: display.html
